# CommonLib

./: .envrc  .gitignore  CMakeLists.txt  LICENSE  README.md  demo.cpp  flake.nix
.github/workflows/: ci.yml
src/: Arc.cppm  Array.cppm  ArrayList.cppm  Atomic.cppm  BitArray.cppm  BitList.cppm  Box.cppm  CMakeLists.txt  Color.cppm  CommonLib.cppm  Error.cppm  Errors.cppm  FixedString.cppm  Flags.cppm  Function.cppm  HashMap.cppm  InitializerList.cppm  Iterator.cppm  LinkedList.cppm  Math.cppm  Memory.cppm  Option.cppm  Pair.cppm  Platform.cppm  Queue.cppm  Range.cppm  Rc.cppm  Result.cppm  Span.cppm  String.cppm  StringOps.cppm  StringView.cppm  Sync.cppm  TypeList.cppm  TypeTraits.cppm  Types.cppm  Utility.cppm  UtilityBase.cppm  Variant.cppm
tests/: CMakeLists.txt  commonlib_tests.cpp  test_bits_hash_queue.cpp  test_collections.cpp  test_functional.cpp  test_strings.cpp  test_traits.cpp
