add_library(CommonLib OBJECT)

file(GLOB_RECURSE COMMONLIB_MODULE_SOURCES CONFIGURE_DEPENDS
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cppm")

if(NOT DEFINED COMMONLIB_PLATFORM OR COMMONLIB_PLATFORM STREQUAL "")
  set(_COMMONLIB_PLATFORM_DEFAULT nix)
  if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
    set(_COMMONLIB_PLATFORM_DEFAULT win)
  endif()

  set(COMMONLIB_PLATFORM
      "${_COMMONLIB_PLATFORM_DEFAULT}"
      CACHE STRING "CommonLib platform backend (nix, win, none)")
endif()

string(TOLOWER "${COMMONLIB_PLATFORM}" COMMONLIB_PLATFORM)
set_property(CACHE COMMONLIB_PLATFORM PROPERTY STRINGS nix win none)

if(COMMONLIB_PLATFORM STREQUAL "nix")
  set(COMMONLIB_PLATFORM_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/platforms/nix.cpp")
elseif(COMMONLIB_PLATFORM STREQUAL "win")
  set(COMMONLIB_PLATFORM_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/platforms/win.cpp")
elseif(COMMONLIB_PLATFORM STREQUAL "none")
  set(COMMONLIB_PLATFORM_SOURCE
      "${CMAKE_CURRENT_SOURCE_DIR}/platforms/none.cpp")
else()
  message(FATAL_ERROR "Unsupported COMMONLIB_PLATFORM: ${COMMONLIB_PLATFORM}")
endif()

target_sources(CommonLib PUBLIC FILE_SET cxx_modules TYPE CXX_MODULES FILES
                                ${COMMONLIB_MODULE_SOURCES})

target_sources(CommonLib PRIVATE "${COMMONLIB_PLATFORM_SOURCE}")

target_compile_options(CommonLib
                       PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${CXX_COMPILER_FLAGS}>)
